# HD-EPIC-NF

./: .gitignore  README.md  index.html  pyproject.toml
hde/: __init__.py  config.py  deep.py  evaluate.py  extract.py  features.py  fetch.py  heatmap.py  model.py  replay.py  report.py  train.py
results/: metrics.json  model.pt
