[project]
name = "hd-epic-nf"
version = "0.1.0"
description = "Conditional Normalizing-Flow placement surprise on HD-EPIC real kitchens (3-D location + gaze)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2", "zuko>=1.4", "pandas>=2.0", "pyarrow>=14",
    "numpy>=1.26", "matplotlib>=3.8",
]

[tool.uv]
package = false
